# template-wgpu

./: .clang-format  CMakeLists.txt  README.md  webgpu-utils.cpp
cmake/: CompilerWarnings.cmake
engine/: CMakeLists.txt  discipline_types.h
src/: CMakeLists.txt  webgpu-utils.cpp  webgpu-utils.h
